RESOLVED FIXED214273
Flashes of incorrect scroll position when zooming on quip
https://bugs.webkit.org/show_bug.cgi?id=214273
Summary Flashes of incorrect scroll position when zooming on quip
Simon Fraser (smfr)
Reported 2020-07-13 14:28:42 PDT
Flashes of incorrect scroll position when zooming on quip
Attachments
Patch (16.85 KB, patch)
2020-07-13 14:35 PDT, Simon Fraser (smfr)
thorton: review+
Patch (16.85 KB, patch)
2020-07-13 14:50 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-07-13 14:35:19 PDT
Simon Fraser (smfr)
Comment 2 2020-07-13 14:35:22 PDT
Tim Horton
Comment 3 2020-07-13 14:45:47 PDT
Comment on attachment 404175 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=404175&action=review > Source/WebKit/ChangeLog:14 > + When refusing such a scroll, we have to inform the web process to void mismatched ui/web process state, is "void" "avoid" or something else? > Source/WebKit/UIProcess/ios/WKContentView.mm:439 > + sendEvenIfUnchanged:(BOOL)sendEvenIfUnchanged We really gotta struct this up at some point
Simon Fraser (smfr)
Comment 4 2020-07-13 14:50:01 PDT
Simon Fraser (smfr)
Comment 5 2020-07-14 12:29:21 PDT
Note You need to log in before you can comment on or make changes to this bug.